# ContextBank

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.contextbank/: project.yml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  mcp.md  research.md
src/contextbank/: __init__.py  __main__.py  ids.py  models.py  paths.py  providers.py
src/contextbank/classification/: __init__.py  rules.py
src/contextbank/cli/: app.py
src/contextbank/compilation/: __init__.py  cards.py
src/contextbank/config/: settings.py
src/contextbank/connectors/: __init__.py  adapters.py  base.py
src/contextbank/connectors/files/: __init__.py  importer.py
src/contextbank/connectors/x/: client.py  (+2 more)
src/contextbank/embeddings/: __init__.py  local.py  openai_compatible.py
src/contextbank/export/: archive.py
src/contextbank/extraction/: __init__.py  web.py
src/contextbank/freshness/: __init__.py  rules.py
src/contextbank/generation/: __init__.py  openai_compatible.py
src/contextbank/mcp/: server.py
src/contextbank/observability/: logging.py
src/contextbank/projects/: __init__.py  profile.py
src/contextbank/retrieval/: __init__.py  search.py
src/contextbank/security/: __init__.py  trust.py
src/contextbank/storage/: db.py  repository.py
tests/: helpers.py  test_cli.py  test_compilation.py  test_e2e_smoke.py  test_embeddings.py  test_freshness.py  test_generation.py  test_generation_coercion.py  test_ingestion.py  test_mcp_contract.py  test_retrieval.py  test_retrieval_p1.py  test_storage.py  test_trust.py  test_x_oauth.py
(+4 files in other folders)
