[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextbank"
version = "0.1.0"
description = "Local-first personal knowledge bank for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ContextBank contributors" }]
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pydantic>=2.8",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
mcp = ["mcp>=1.12"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
contextbank = "contextbank.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/contextbank"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
